WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
66728
HTMLSourceTracker crashes when network packets break poorly
https://bugs.webkit.org/show_bug.cgi?id=66728
Summary
HTMLSourceTracker crashes when network packets break poorly
Adam Barth
Reported
2011-08-22 16:25:21 PDT
HTMLSourceTracker crashes when network packets break poorly
Attachments
Patch
(4.20 KB, patch)
2011-08-22 16:27 PDT
,
Adam Barth
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Adam Barth
Comment 1
2011-08-22 16:27:32 PDT
Created
attachment 104762
[details]
Patch
WebKit Review Bot
Comment 2
2011-08-22 16:52:53 PDT
Comment on
attachment 104762
[details]
Patch Clearing flags on attachment: 104762 Committed
r93561
: <
http://trac.webkit.org/changeset/93561
>
WebKit Review Bot
Comment 3
2011-08-22 16:52:57 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug